--- a/android/client-android/app/src/main/res/layout/activity_main.xml
+++ b/android/client-android/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
                         />
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -65,6 +66,32 @@
                             android:textSize="18sp"
                             android:layout_marginStart="100dp"
                             android:text="@string/losses"
+                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textColor="?android:attr/textColorSecondary"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/profits"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:textStyle="bold"
+                            android:textSize="18sp"
+                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textColor="?android:attr/textColorSecondary"
+                            />
+                        <TextView
+                            android:id="@+id/expenses"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:textSize="18sp"
+                            android:layout_marginStart="100dp"
+                            android:textStyle="bold"
                             android:textAppearance="?attr/textAppearanceBody2"
                             android:textColor="?android:attr/textColorSecondary"
                             />
@@ -101,7 +128,7 @@
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
-        <com.google.android.material.card.MaterialCardView
+        <!--<com.google.android.material.card.MaterialCardView
             android:id="@+id/carStatisticsSales"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -112,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!-- Media -->
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="194dp"
@@ -126,7 +153,7 @@
                     android:orientation="vertical"
                     android:padding="16dp">
 
-                    <!-- Title, secondary and supporting text -->
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -159,7 +186,7 @@
 
                 </LinearLayout>
 
-                <!-- Buttons -->
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -187,7 +214,7 @@
 
             </LinearLayout>
 
-        </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>-->
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardProfile"
             android:layout_width="match_parent"
@@ -234,16 +261,16 @@
                             android:textAppearance="?attr/textAppearanceBody2"
 
                             />
+
                         <TextView
                             android:id="@+id/profileCredential"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
                             android:layout_marginStart="115dp"
+                            android:layout_marginTop="8dp"
                             android:text="0918237421"
                             android:textAppearance="?attr/textAppearanceBody2"
-                            android:textColor="?android:attr/textColorSecondary"
-                            />
+                            android:textColor="?android:attr/textColorSecondary" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="wrap_content"
