--- a/android/client-android/app/src/main/res/layout/activity_signup.xml
+++ b/android/client-android/app/src/main/res/layout/activity_signup.xml
@@ -66,7 +66,7 @@
             android:layout_marginStart="30dp"
             android:orientation="vertical">
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/credentials"
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -75,13 +75,14 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/credentials"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/name"
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -89,13 +90,14 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/names"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/lastname"
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -103,13 +105,14 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/lastname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/emailField"
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -118,6 +121,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/emailField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
@@ -125,7 +129,7 @@
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/phoneNumber"
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -134,6 +138,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
@@ -141,7 +146,27 @@
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/usernameField"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:hint="@string/phonenumber_field"
+
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                <Spinner
+                    android:id="@+id/departmentName"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+
+                </Spinner>
+                <!--<com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    />-->
+
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -150,13 +175,14 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/usernameField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/passWord"
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -166,6 +192,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/passWord"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -173,7 +200,7 @@
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/repeatPassword"
+
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -183,6 +210,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/repeatPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -200,22 +228,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="55dp"
                     android:layout_marginStart="25dp"
-                    android:textStyle="bold"
-                    app:cornerRadius="?attr/dialogPreferredPadding"
+                    android:onClick="saveButtonNewEmployee"
+                    android:text="@string/save_button"
                     android:textColor="@color/buttonsMain"
+                    android:textStyle="bold"
                     app:backgroundTint="@color/colorPrimaryDark"
-                    android:text="@string/save_button" />
+                    app:cornerRadius="?attr/dialogPreferredPadding" />
 
                 <Button
-                    android:id="@+id/viewListButton"
+                    android:id="@+id/buttonCancel"
                     android:layout_width="150dp"
                     android:layout_height="55dp"
-                    android:textStyle="bold"
-                    app:cornerRadius="?attr/dialogPreferredPadding"
                     android:layout_marginStart="55dp"
+                    android:onClick="onCancelButton"
+                    android:text="@string/cancel_button"
                     android:textColor="@color/buttonsMain"
+                    android:textStyle="bold"
                     app:backgroundTint="@color/colorPrimaryDark"
-                    android:text="@string/cancel_button" />
+                    app:cornerRadius="?attr/dialogPreferredPadding" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
